[liquibase] refactor structure, add liquibase user setup ddl

--- a/xnmdatabase/src/main/resources/liquibase.properties
+++ b/xnmdatabase/src/main/resources/liquibase.properties
@@ -2,3 +2,5 @@
 # suppress inspection "UnusedProperty" for whole file
 changelogSchemaName:LIQUIBASE
 driver:oracle.jdbc.OracleDriver
+database.username = xnmpdb_admin
+database.password = xnmpdb_admin
