--- a/xnmdatabase/pom.xml
+++ b/xnmdatabase/pom.xml
@@ -39,7 +39,7 @@
                 </property>
             </activation>
             <properties>
-                <database.url>jdbc:oracle:thin:@localhost:152111:xnmpdb</database.url>
+                <database.url>jdbc:oracle:thin:@172.18.0.2:1521:XNMPDB</database.url>
                 <liquibase.username>xnmpdb_admin</liquibase.username>
                 <liquibase.password>xnmpdb_admin</liquibase.password>
                 <liquibase.contexts>development</liquibase.contexts>
