--- a/xnmdatabase/src/main/resources/liquibase.properties
+++ b/xnmdatabase/src/main/resources/liquibase.properties
@@ -4,4 +4,5 @@ changelogSchemaName:LIQUIBASE
 driver:oracle.jdbc.OracleDriver
 database.username = xnmpdb_admin
 database.password = xnmpdb_admin
-database.url = jdbc:oracle:thin:@172.18.0.2:1521:XNMPDB
+# database.url = jdbc:oracle:thin:@172.18.0.2:1521:XNMPDB
+database.url = jdbc:oracle:thin:@localhost:15211:XNMPDB
