--- a/xnmdatabase/pom.xml
+++ b/xnmdatabase/pom.xml
@@ -69,7 +69,7 @@
                 </property>
             </activation>
             <properties>
-                <database.url>jdbc:oracle:thin:@btchost:15211/XNMPDB</database.url>
+                <database.url>jdbc:oracle:thin:@localhost:32118/XNMPDB</database.url>
                 <liquibase.username>xnmpdb_admin</liquibase.username>
                 <liquibase.password>xnmpdb_admin</liquibase.password>
                 <liquibase.contexts>development</liquibase.contexts>
