--- a/xnmdatabase/pom.xml
+++ b/xnmdatabase/pom.xml
@@ -56,7 +56,7 @@
                 </property>
             </activation>
             <properties>
-                <database.url>jdbc:oracle:thin:@localhost:1980/XNMPDB</database.url>
+                <database.url>jdbc:oracle:thin:@localhost:1521/xnmpdb</database.url>
                 <liquibase.username>xnmpdb_admin</liquibase.username>
                 <liquibase.password>xnmpdb_admin</liquibase.password>
                 <liquibase.contexts>development</liquibase.contexts>
