--- a/btclgalanddatabase/pom.xml
+++ b/btclgalanddatabase/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.btcserv.xnm</groupId>
-    <artifactId>xnm-database</artifactId>
+    <groupId>com.betcserv.lga.mgmt.land</groupId>
+    <artifactId>lga-land-database</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <liquibase-maven.version>3.6.3</liquibase-maven.version>
