--- a/btcmetrolanddatabase/src/main/resources/liquibase.properties
+++ b/btcmetrolanddatabase/src/main/resources/liquibase.properties
@@ -2,8 +2,8 @@
 # suppress inspection "UnusedProperty" for whole file
 changelogSchemaName:LIQUIBASE
 driver:oracle.jdbc.OracleDriver
-database.username = btcmetroland_admin
-database.password = btcmetroland_admin
+database.username = btcmetrolandpdb_admin
+database.password = btcmetrolandpdb_admin
 # database.url = jdbc:oracle:thin:@172.18.0.2:1521:btcmetrolandpdb
 #database.url = jdbc:oracle:thin:@btchost:15211:btcmetrolandpdb
 database.url = jdbc:oracle:thin:@/localhost:1521:btcmetrolandpdb
